--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -56,3 +56,9 @@
   </table>
 
 </body>
+
+<h2>Total Revenue from Invoice #<%= @invoice.id %></h2>
+Total Revenue: $<%= @invoice.total_revenue %><br>
+Discount Percentage: <%= @invoice.percent_discount %>%
+Total Discount: $<%= @invoice.total_discount.round(2) %>
+Total After Discount: $<%= @invoice.total_after_discount %>
