--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -45,7 +45,7 @@
             <td style="text-align:center"><%= i.item.name %></td>
             <td style="text-align:center"><%= i.quantity %></td>
             <td style="text-align:center">$<%= i.unit_price %></td>
-            <td style="text-align:center"><%= link_to_if i.has_discount, "Bulk Discount ##{i.bd_id} Applied", "/merchant/#{@merchant.id}/bulk_discounts/#{i.bd_id}" %></td>
+            <td style="text-align:center"><%= link_to "Bulk Discount ##{i.bd_id} Applied", "/merchant/#{@merchant.id}/bulk_discounts/#{i.bd_id}" if i.has_discount %></td>
             <td style="text-align:center"><%= form_with model: @invoice, url: merchant_invoice_path(@merchant, @invoice), method: :patch, local: true do |f| %>
                                             <%= f.select :status, Invoice.statuses.keys, selected: "#{@invoice.status}" %>
                                             <%= f.submit 'Update Invoice' %>
