--- a/app/views/bulk_discounts/edit.html.erb
+++ b/app/views/bulk_discounts/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: "/merchant/#{@merchant.id}/bulk_discounts/#{@bd.id}", method: :patch, local: true do |f| %>
+<%= form_with url: merchant_bulk_discount_path(@merchant, @bd), method: :patch, local: true do |f| %>
   <%= f.label :discount %>
   <%= f.text_field :discount, value: @bd.discount %>
   <%= f.label :threshold %>
