--- a/app/views/bulk_discounts/new.html.erb
+++ b/app/views/bulk_discounts/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: "/merchant/#{@merchant.id}/bulk_discounts", method: :post, local: true do |f| %>
+<%= form_with url: merchant_bulk_discounts_path(@merchant), method: :post, local: true do |f| %>
   <%= f.label :discount %>
   <%= f.text_field :discount %>
 
